2017-01-23  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py(HIRS):

	- Started implementing improved overlap choice.  Work in progress.

2017-01-23  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/math/stats.py(corrcoef):

	- Calculate corrcoef with p-values.  Taken from StackOverflow,
	attribution in source code.

2017-01-23  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/metrology.py:
	
	- We don't want uncertainties expressed in the free symbols if some
	symbols are arrays; rather, each element of the array needs to have
	its own uncertainty expression.  This is particularly important if
	different elements of an array have different units, such as may be
	the case when the coefficients of a polynomial are represented as an
	array.  Added a helper function to use for this.

2017-01-20  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/metrology.py:

	Started module with metrological functions.  Has soft dependency on
	sympy.

2017-01-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/griddedfield.py:

	Fixed __eq__() to work with empty GriddedField objects (cases where gf.data
	and gf.grids are None).

	* typhon/arts/tests/test_griddedfield.py:

	Added an equality test for empty GriddedFields.

2017-01-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py:

	Added new function colors2cmap() to convert a given list of colors (named
	color, rgb or hex) into a LinearSegmentedColormap.

7-01-10  Gerrit Holl  <g.holl@reading.ac.uk>

201	* typhon/datasets/tovs.py(HIRS):

	(._read):

	- Throw out anyone who doesn't want to stand in line nicely

7-01-10  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	(Dataset.read):

	- Don't fail on verifying time sorting if our array is too short to do
	so

	* typhon/datasets/tovs.py(HIRS):

	(._read):

	- Throw out scanlines where the time is bad.  Masking is not enough;
	time series processing tools such as xarray assume sequential time so